--- a/selfware-longrun.toml
+++ b/selfware-longrun.toml
@@ -2,7 +2,7 @@
 # Usage: selfware --config selfware-longrun.toml run "your task"
 
 endpoint = "http://localhost:8888/v1"
-model = "kimi-k2.5"
+model = "Qwen/Qwen3-Coder-Next-FP8"
 max_tokens = 198304
 temperature = 1.0
 
