--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,6 +10,11 @@ on:
         description: 'Release tag (e.g., v0.1.0)'
         required: true
         type: string
+      draft:
+        description: 'Create as draft release'
+        required: false
+        type: boolean
+        default: false
 
 env:
   CARGO_TERM_COLOR: always
@@ -63,6 +68,17 @@ jobs:
         with:
           targets: ${{ matrix.target }}
 
+      - name: Cache cargo registry
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.cargo/registry
+            ~/.cargo/git
+            target
+          key: ${{ runner.os }}-${{ matrix.target }}-cargo-release-${{ hashFiles('**/Cargo.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-${{ matrix.target }}-cargo-release-
+
       - name: Install cross-compilation tools (Linux aarch64)
         if: matrix.cross
         run: |
@@ -99,6 +115,7 @@ jobs:
         with:
           name: ${{ matrix.name }}
           path: ${{ matrix.name }}.${{ matrix.archive }}
+          retention-days: 30
 
   release:
     name: Create Release
@@ -133,7 +150,7 @@ jobs:
         with:
           tag_name: ${{ steps.version.outputs.version }}
           name: Selfware ${{ steps.version.outputs.version }}
-          draft: false
+          draft: ${{ github.event.inputs.draft || false }}
           prerelease: ${{ contains(steps.version.outputs.version, 'alpha') || contains(steps.version.outputs.version, 'beta') || contains(steps.version.outputs.version, 'rc') }}
           generate_release_notes: true
           files: |
