--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,29 +6,29 @@ license = "MIT"
 description = "Your personal AI workshop — software you own, software that lasts"
 authors = ["Trebuchet Network"]
 homepage = "https://selfware.me"
-repository = "https://github.com/trebuchet-network/selfware"
+repository = "https://github.com/architehc/selfware"
 keywords = ["ai", "agent", "local-first", "cli", "automation"]
 categories = ["command-line-utilities", "development-tools"]
 
 [dependencies]
-tokio = { version = "1.35", features = ["full"] }
+tokio = { version = "1.43", features = ["rt-multi-thread", "macros", "sync", "time", "fs", "io-util", "process"] }
 anyhow = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-reqwest = { version = "0.11", features = ["json", "stream"] }
+reqwest = { version = "0.12", features = ["json", "stream"] }
 clap = { version = "4.4", features = ["derive"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
-git2 = "0.18"
+git2 = "0.19"  # Updated for security fixes (CVE-2024-24575, CVE-2024-24577)
 walkdir = "2.4"
-regex = "1.10"
+regex = "1.11"
 colored = "2.1"
 chrono = { version = "0.4", features = ["serde"] }
 thiserror = "1.0"
 futures = "0.3"
 async-trait = "0.1"
 tempfile = "3.9"
-base64 = "0.21"
+base64 = "0.22"
 glob = "0.3"
 rusqlite = { version = "0.31", features = ["bundled"], optional = true }
 sha2 = "0.10"
@@ -47,7 +47,7 @@ syntect = "5.2"
 nu-ansi-term = "0.50"
 dirs = "5.0"
 nucleo = "0.5"  # Fast fuzzy matcher
-pulldown-cmark = "0.9"  # Markdown parsing
+pulldown-cmark = "0.9"  # Markdown parsing (0.12+ has breaking API changes)
 similar = "2.4"  # Diff algorithm
 
 # Vector Memory & RAG
