--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install Rust ${{ matrix.rust }}
-        uses: dtolnay/rust-action@${{ matrix.rust }}
+        uses: dtolnay/rust-toolchain@${{ matrix.rust }}
 
       - name: Cache cargo registry
         uses: actions/cache@v4
@@ -65,7 +65,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install Rust stable
-        uses: dtolnay/rust-action@stable
+        uses: dtolnay/rust-toolchain@stable
         with:
           components: rustfmt, clippy
 
@@ -96,7 +96,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install Rust 1.75.0
-        uses: dtolnay/rust-action@1.75.0
+        uses: dtolnay/rust-toolchain@1.75.0
 
       - name: Cache cargo registry
         uses: actions/cache@v4
@@ -128,7 +128,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install Rust stable
-        uses: dtolnay/rust-action@stable
+        uses: dtolnay/rust-toolchain@stable
 
       - name: Build documentation
         run: cargo doc --no-deps --all-features
@@ -160,7 +160,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install Rust stable
-        uses: dtolnay/rust-action@stable
+        uses: dtolnay/rust-toolchain@stable
 
       - name: Cache cargo registry
         uses: actions/cache@v4
