--- a/Cargo.toml
+++ b/Cargo.toml
@@ -98,6 +98,10 @@ name = "selfware"
 path = "src/main.rs"
 
 [[test]]
+name = "unit"
+path = "tests/unit/mod.rs"
+
+[[test]]
 name = "integration"
 path = "tests/integration/mod.rs"
 required-features = ["integration"]
