--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,6 +20,9 @@ env:
   CARGO_TERM_COLOR: always
   RUST_BACKTRACE: 1
 
+permissions:
+  contents: read
+
 jobs:
   build:
     name: Build ${{ matrix.target }}
@@ -30,32 +33,32 @@ jobs:
         include:
           # Linux x86_64
           - target: x86_64-unknown-linux-gnu
-            os: ubuntu-latest
+            os: ubuntu-22.04
             archive: tar.gz
             name: selfware-linux-x86_64
 
           # Linux aarch64
           - target: aarch64-unknown-linux-gnu
-            os: ubuntu-latest
+            os: ubuntu-22.04
             archive: tar.gz
             name: selfware-linux-aarch64
             cross: true
 
           # macOS Apple Silicon
           - target: aarch64-apple-darwin
-            os: macos-latest
+            os: macos-14
             archive: tar.gz
             name: selfware-macos-aarch64
 
           # macOS Intel
           - target: x86_64-apple-darwin
-            os: macos-latest
+            os: macos-14
             archive: tar.gz
             name: selfware-macos-x86_64
 
           # Windows x86_64
           - target: x86_64-pc-windows-msvc
-            os: windows-latest
+            os: windows-2022
             archive: zip
             name: selfware-windows-x86_64
 
@@ -90,7 +93,7 @@ jobs:
         run: cargo build --release --target ${{ matrix.target }}
 
       - name: Prepare archive (Unix)
-        if: matrix.os != 'windows-latest'
+        if: matrix.os != 'windows-2022'
         run: |
           mkdir -p dist
           cp target/${{ matrix.target }}/release/selfware dist/
@@ -100,7 +103,7 @@ jobs:
           tar -czvf ../${{ matrix.name }}.tar.gz *
 
       - name: Prepare archive (Windows)
-        if: matrix.os == 'windows-latest'
+        if: matrix.os == 'windows-2022'
         shell: pwsh
         run: |
           New-Item -ItemType Directory -Force -Path dist
@@ -120,7 +123,7 @@ jobs:
   release:
     name: Create Release
     needs: build
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     permissions:
       contents: write
 
@@ -164,7 +167,7 @@ jobs:
   publish:
     name: Publish to crates.io
     needs: release
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     if: startsWith(github.ref, 'refs/tags/v') && !contains(github.ref, 'alpha') && !contains(github.ref, 'beta')
 
     steps:
@@ -176,4 +179,3 @@ jobs:
 
       - name: Publish to crates.io
         run: cargo publish --token ${{ secrets.CARGO_REGISTRY_TOKEN }}
-        continue-on-error: true
