feat: connect TUI dashboard to agent execution and fix critical safety/API gaps
- TUI: Connected dashboard to Agent via mpsc channels for real-time task execution
- TUI: Added AgentStatus, ToolStatus, and TokenUsage event emission during tasks
- API: Added missing Authorization header to ApiClient for authenticated endpoints
- Safety: Expanded SafetyChecker to validate paths for all path-bearing tools (search, trees, etc.)
- Safety: Enhanced shell safety with cwd validation and destructive 'rm -rf ..' detection
- Reliability: Fixed multi-agent deadlock with n=0 and ChatStore fallback directory creation
- DevOps: Fixed CI/CD workflow versions and ensured --all-features in release builds
- Tests: Added system_test.rs for end-to-end live endpoint verification

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -107,6 +107,11 @@ name = "integration"
 path = "tests/integration/mod.rs"
 required-features = ["integration"]
 
+[[test]]
+name = "system_test"
+path = "tests/system_test.rs"
+required-features = ["integration"]
+
 # Examples
 [[example]]
 name = "basic_chat"
