--- a/Cargo.toml
+++ b/Cargo.toml
@@ -56,6 +56,8 @@ ctrlc = "3"
 # Vector Memory & RAG
 hnsw_rs = "0.3"  # Hierarchical Navigable Small World graphs (embedded vector search)
 bincode = "1.3"  # Fast binary serialization
+aes-gcm = "0.10"
+keyring = "3.2"
 
 # Workflows
 serde_yaml = "0.9"  # YAML workflow definitions
