--- a/deny.toml
+++ b/deny.toml
@@ -17,8 +17,8 @@ db-path = "~/.cargo/advisory-db"
 db-urls = ["https://github.com/rustsec/advisory-db"]
 # Ignore these advisories (add specific IDs if needed)
 ignore = []
-# Treat unmaintained crates as warnings
-unmaintained = "warn"
+# Treat unmaintained crates as errors
+unmaintained = "deny"
 # Yanked crates are errors
 yanked = "deny"
 
