--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,7 +44,7 @@ whoami = "2.1"
 # Modern CLI/TUI
 reedline = "0.45"
 crossterm = "0.27"
-ratatui = "0.26"
+ratatui = "0.30"
 fuzzy-matcher = "0.3"
 syntect = "5.2"
 nu-ansi-term = "0.50"
@@ -59,7 +59,7 @@ ctrlc = "3"
 
 # Vector Memory & RAG
 hnsw_rs = "0.3"  # Hierarchical Navigable Small World graphs (embedded vector search)
-bincode = "1.3"  # Fast binary serialization
+bincode = { version = "2.0", features = ["serde"] }  # Fast binary serialization
 aes-gcm = "0.10"
 keyring = "3.2"
 
