--- a/Cargo.toml
+++ b/Cargo.toml
@@ -68,6 +68,7 @@ serde_yaml = "0.9"  # YAML workflow definitions
 zeroize = "1.8.2"
 parking_lot = "0.12.5"
 lru = "0.16.3"
+libloading = "0.9.0"
 
 [target.'cfg(unix)'.dependencies]
 nix = { version = "0.30", features = ["signal"] }
