--- a/Cargo.toml
+++ b/Cargo.toml
@@ -69,6 +69,9 @@ zeroize = "1.8.2"
 parking_lot = "0.12.5"
 lru = "0.16.3"
 libloading = "0.9.0"
+sysinfo = "0.38.2"
+nvml-wrapper = "0.12.0"
+zstd = "0.13.3"
 
 [target.'cfg(unix)'.dependencies]
 nix = { version = "0.30", features = ["signal"] }
