feat: implement Qwen3 specific tool optimizations (FIM, Think bounds, Tokenizer)
This implements Phase 1 task #11 Qwen3 Optimizations:
- Migrated from cl100k heuristic to accurate huggingface tokenizers for Qwen vocab
- Added native Fill-in-the-Middle (FIM) file editing tool for precise block replacement
- Implemented API <think> block boundary toggles for the Disabled mode.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -72,6 +72,7 @@ libloading = "0.9.0"
 sysinfo = "0.38.2"
 nvml-wrapper = "0.12.0"
 zstd = "0.13.3"
+tokenizers = { version = "0.22.2", features = ["hf-hub", "http"] }
 
 [target.'cfg(unix)'.dependencies]
 nix = { version = "0.30", features = ["signal"] }
