Production readiness: Security, Reliability, Observability, and CI hardening
- Phase 1: Fixed symlink TOCTOU, encryption salt perms, YOLO JSON bypass, predictable HMAC, and panics in completer.

- Phase 2: Eliminated async deadlocks (tokio::sync::RwLock). Bounded critical episodes. Added CircuitBreaker to API client. Added graceful ctrl_c shutdown.

- Phase 3: Added integration tests for cli, errors, and supervision.

- Phase 4: Replaced in-memory logging with tracing-appender for daily rotation. Added OpenTelemetry/OTLP and Prometheus /metrics exporter.

- Phase 5: Locked MSRV to 1.85. Handled cargo deny CDLA-Permissive license issues and transitive unmaintained dev-dependencies.

Resolves comprehensive deep dive architectural review action items.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-24.04, macos-14, windows-2022]
-        rust: [stable, beta]
+        rust: [stable]
         exclude:
           # Only test beta on Linux to save CI time
           - os: macos-14
