--- a/deny.toml
+++ b/deny.toml
@@ -22,6 +22,10 @@ ignore = [
     "RUSTSEC-2025-0141",
     # yaml-rust 0.4.5 -- pulled in by syntect; waiting for upstream to migrate
     "RUSTSEC-2024-0320",
+    # number_prefix 0.4.0 -- pulled in by indicatif
+    "RUSTSEC-2025-0119",
+    # paste 1.0.15 -- pulled in by tokenizers
+    "RUSTSEC-2024-0436",
 ]
 # Treat unmaintained crates as errors (all = error for any unmaintained crate)
 unmaintained = "all"
@@ -43,6 +47,7 @@ allow = [
     "Unicode-3.0",
     "OpenSSL",
     "CC0-1.0",
+    "CDLA-Permissive-2.0",
     "Unlicense",
 ]
 # Confidence threshold for detecting license from text
